# Prediction-Edge

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  playwright-current.md  pyproject.toml
.claude/: settings.local.json
data/: README.md
docs/: kalshi-edge-research-plan.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: api.ts  components.tsx  main.tsx  pages.tsx  routes.tsx  styles.css  types.ts
scripts/: backfill_all.ps1  backfill_all.sh  backfill_history.ps1  backfill_history.sh
src/mlpm/: __init__.py  cli.py
src/mlpm/api/: app.py  jobs.py  schemas.py  services.py
src/mlpm/app/: dashboard.py
src/mlpm/backtest/: __init__.py  report.py  research.py  run_backtest.py  walkforward.py
src/mlpm/config/: settings.py
src/mlpm/evaluation/: __init__.py  settled.py  strategy.py
src/mlpm/features/: build_features.py  market_priors.py  matchups.py  pitching.py  team_strength.py  utils.py
src/mlpm/historical/: __init__.py  common.py  kalshi_backfill.py  mlb_backfill.py  normalize_kalshi_history.py  replay.py  (+3 more)
tests/: test_api.py  test_champion_guardrails.py  test_cli.py  test_collect.py  test_duckdb_storage.py  test_fair_value.py  test_features.py  test_game_outcome_model.py  test_historical.py  test_historical_backtest.py  test_ingest_http.py  test_kalshi_rate_limits.py  test_kalshi_research.py  test_mapping.py  test_mlb_stats.py  test_mlp_contender.py  test_pitching.py  test_probability.py  test_replay.py  test_runner.py  test_sbro.py  test_settled.py  test_strategy.py  test_team_strength.py  test_weather.py
(+18 files in other folders)
