[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlpm"
version = "0.1.0"
description = "Local MLB prediction-market discrepancy research pipeline."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "duckdb>=1.1.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "mlflow>=2.16.0",
  "numpy>=2.1.0",
  "openpyxl>=3.1.0",
  "pandas>=2.2.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "python-dotenv>=1.0.1",
  "scikit-learn>=1.5.0",
  "streamlit>=1.39.0",
  "torch>=2.4.0",
  "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
]

[project.scripts]
mlpm = "mlpm.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
norecursedirs = ["pytest-cache-files-*"]
